<resources>
    <string name="app_name">AndroidBasic2</string>
    <string name="go_button1_title">Go to Example1 Activity</string>
    <string name="go_button2_title">Go to Example2 Activity</string>
    <string name="go_button3_title">Go to Example3 Activity</string>
    <string name="go_button4_title">Go to Example4 Activity</string>
    <string name="go_button5_title">Go to Example5 Activity</string>
    <string name="menu_red_string">Red</string>
    <string name="menu_green_string">Green</string>
    <string name="menu_blue_string">Blue</string>
</resources>
