<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.o7planning.androidbasic2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <Button
                                                                        android:id="@+id/go_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_button1_title" />

        <Button
            android:id="@+id/go_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_button2_title" />

        <Button
            android:id="@+id/go_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_button3_title" />

        <Button
            android:id="@+id/go_button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_button4_title" />

        <Button
            android:id="@+id/go_button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_button5_title" />
    </LinearLayout>
</RelativeLayout>
