<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Example4Activity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_red"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/menu_red_string"/>

        <item
            android:id="@+id/menu_green"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/menu_green_string"/>

        <item
            android:id="@+id/menu_blue"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/menu_blue_string"/>
    </group>

</menu>